syntax = "proto3";
package orderbookaggregator;
service OrderbookAggregator {
    rpc BookSummary(SummaryRequest) returns (stream Summary);
}
message Empty {}
message SummaryRequest {
    uint32 levels = 1;
    string symbol = 2;
}
message Summary {
    double spread = 1;
    repeated Level bids = 2;
    repeated Level asks = 3;
}
message Level {
    string exchange = 1;
    double price = 2;
    double amount = 3;
}